<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.christophe</groupId>
  <artifactId>twitter-statistic</artifactId>
  <version>1.0-SNAPSHOT</version>
  <inceptionYear>2008</inceptionYear>

  <repositories>
    <repository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>http://scala-tools.org/repo-releases</url>
    </repository>
  </repositories>


    <pluginRepositories>
        <pluginRepository>
            <id>scala-tools.org</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </pluginRepository>
        <pluginRepository>
            <id>twitter-repo</id>
            <name>twitter-repo</name>
            <url>https://maven.twttr.com</url>
        </pluginRepository>
        <pluginRepository>
            <id>sonatype</id>
            <name>sonatype</name>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
        </pluginRepository>
    </pluginRepositories>


    <properties>
        <mainClass>com.socgen.drhg.dhr.api.DataHubApp</mainClass>
        <buildPropertiesPackage>com.socgen.drhg.dhr.api</buildPropertiesPackage>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>

        <scala.artifactVersion>2.11</scala.artifactVersion>
        <scala.version>2.11.11</scala.version>

        <finatra.version>2.10.0</finatra.version>
        <joda-time.version>2.9.4</joda-time.version>
        <jackson-databind.version>2.8.4</jackson-databind.version>
        <logback-classic.version>1.1.7</logback-classic.version>
        <guice-testlib.version>4.0</guice-testlib.version>
        <salat.version>1.11.2</salat.version>
        <scalatest.version>3.0.0</scalatest.version>
        <!--<specs2.version>2.4.17</specs2.version>-->
        <typesafeconfig-guice.version>0.0.2</typesafeconfig-guice.version>
        <typesafe-config.version>1.3.0</typesafe-config.version>
        <finagle-postgres.version>0.4.3</finagle-postgres.version>

        <swagger.version>1.5.10</swagger.version>
        <finatra.swagger.version>0.7.2</finatra.swagger.version>

        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <scala-maven-plugin.version>3.2.0</scala-maven-plugin.version>
        <maven-surefire-plugin.version>2.7</maven-surefire-plugin.version>
        <scalatest-maven-plugin.version>1.0</scalatest-maven-plugin.version>
        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
        <exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
        <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
        <awaitility.version>1.7.0</awaitility.version>
        <commons-dbcp2.version>2.3.0</commons-dbcp2.version>

        <postgres.version>42.0.0</postgres.version>
        <scalaj-http.version>2.3.0</scalaj-http.version>
        <libthrift.version>0.6.1</libthrift.version>
    </properties>

    <dependencies>
        <!-- Scala -->
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <!-- Finatra -->
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>finatra-http_${scala.artifactVersion}</artifactId>
            <version>${finatra.version}</version>
        </dependency>
        <!-- Logback -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>
        <!-- Test Deps -->
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-testlib</artifactId>
            <scope>test</scope>
            <version>${guice-testlib.version}</version>
        </dependency>
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>finatra-http_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <type>test-jar</type>
            <version>${finatra.version}</version>
        </dependency>
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>inject-core_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <type>test-jar</type>
            <version>${finatra.version}</version>
        </dependency>
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>inject-modules_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <type>test-jar</type>
            <version>${finatra.version}</version>
        </dependency>
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>inject-app_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <type>test-jar</type>
            <version>${finatra.version}</version>
        </dependency>
        <dependency>
            <groupId>com.twitter</groupId>
            <artifactId>inject-server_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <type>test-jar</type>
            <version>${finatra.version}</version>
        </dependency>

        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>${swagger.version}</version>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda-time.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.salat</groupId>
            <artifactId>salat_${scala.artifactVersion}</artifactId>
            <version>${salat.version}</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_${scala.artifactVersion}</artifactId>
            <version>${jackson-databind.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.racc</groupId>
            <artifactId>typesafeconfig-guice</artifactId>
            <version>${typesafeconfig-guice.version}</version>
        </dependency>

        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>${typesafe-config.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.xiaodongw</groupId>
            <artifactId>swagger-finatra_${scala.artifactVersion}</artifactId>
            <version>${finatra.swagger.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <version>${scalatest.version}</version>
        </dependency>
        <!--<dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2_${scala.artifactVersion}</artifactId>
            <scope>test</scope>
            <version>${specs2.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-compiler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.scalaz.stream</groupId>
                    <artifactId>scalaz-stream</artifactId>
                </exclusion>
            </exclusions>
        </dependency>-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgres.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.finagle</groupId>
            <artifactId>finagle-postgres_${scala.artifactVersion}</artifactId>
            <version>${finagle-postgres.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.embed</groupId>
            <artifactId>postgresql-embedded</artifactId>
            <version>2.6</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility-scala</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.scalaj</groupId>
            <artifactId>scalaj-http_${scala.artifactVersion}</artifactId>
            <version>${scalaj-http.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${commons-dbcp2.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.scalaz.stream/scalaz-stream -->
        <dependency>
            <groupId>org.scalaz.stream</groupId>
            <artifactId>scalaz-stream_${scala.artifactVersion}</artifactId>
            <version>0.7.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.thrift/libthrift -->
        <dependency>
            <groupId>org.apache.thrift</groupId>
            <artifactId>libthrift</artifactId>
            <version>${libthrift.version}</version>
            <type>pom</type>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>config</directory>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>src/test/webapp</directory>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <configuration>
                            <recompileMode>incremental</recompileMode>
                            <useZincServer>true</useZincServer>
                            <args>
                                <param>-language:_</param>
                                <param>-g:vars</param>
                                <param>-unchecked</param>
                                <param>-deprecation</param>
                                <param>-encoding</param>
                                <param>utf8</param>
                            </args>
                            <javacArgs>
                                <javacArg>-target</javacArg>
                                <javacArg>8</javacArg>
                                <javacArg>-source</javacArg>
                                <javacArg>8</javacArg>
                            </javacArgs>
                        </configuration>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <configuration>
                            <args>
                                <param>-language:_</param>
                                <param>-g:vars</param>
                                <param>-unchecked</param>
                                <param>-deprecation</param>
                                <param>-encoding</param>
                                <param>utf8</param>
                            </args>
                            <javacArgs>
                                <javacArg>-target</javacArg>
                                <javacArg>8</javacArg>
                                <javacArg>-source</javacArg>
                                <javacArg>8</javacArg>
                            </javacArgs>
                        </configuration>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArgs>
                        <jvmArg>-Xmx2G</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>${scalatest-maven-plugin.version}</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <junitxml>.</junitxml>
                    <filereports>WDF TestSuite.txt</filereports>
                    <stdout>D</stdout>
                    <argLine>-Xms512m -XX:PermSize=128m</argLine>
                    <forkMode>once</forkMode>
                    <environmentVariables>
                        <PATH>${env.JAVA_HOME}/bin</PATH>
                    </environmentVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <systemProperties>
                        <systemProperty>
                            <key>log.access.output</key>
                            <value>/dev/stdout</value>
                        </systemProperty>
                        <systemProperty>
                            <key>log.service.output</key>
                            <value>/dev/stdout</value>
                        </systemProperty>
                    </systemProperties>
                    <arguments>
                        <argument>-log.output=/dev/stdout</argument>
                        <argument>-http.port=:8080</argument>
                        <argument>-admin.port=:8081</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
